force-app/main/default/objects/Product2/fields/Company_Size__c.field-meta.xml
<CustomField>
    <fullName>Company_Size__c</fullName>
    <label>Company Size</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2-10 ees</fullName>
            </value>
            <value>
                <fullName>2-30 ees (payroll)</fullName>
            </value>
            <value>
                <fullName>11-30 ees</fullName>
            </value>
            <value>
                <fullName>31-50 ees</fullName>
            </value>
            <value>
                <fullName>51-100 ees</fullName>
            </value>
            <value>
                <fullName>101-150 ees</fullName>
            </value>
            <value>
                <fullName>151-250 ees</fullName>
            </value>
            <value>
                <fullName>251-350 ees</fullName>
            </value>
            <value>
                <fullName>351+ ees</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>