force-app/main/default/objects/Product2/fields/Employee_Range_Lower__c.field-meta.xml
<CustomField>
    <fullName>Employee_Range_Lower__c</fullName>
    <inlineHelpText>Floor of employee range for this product</inlineHelpText>
    <label>Employee Range Lower</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>