force-app/main/default/objects/Product2/fields/Employee_Range_Upper__c.field-meta.xml
<CustomField>
    <fullName>Employee_Range_Upper__c</fullName>
    <inlineHelpText>Defines employee count ceiling that this product applies to</inlineHelpText>
    <label>Employee Range Upper</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>