force-app/main/default/objects/Product2/fields/Service_Option__c.field-meta.xml
<CustomField>
    <fullName>Service_Option__c</fullName>
    <label>Service Option</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Saver(k)</fullName>
            </value>
            <value>
                <fullName>Custom(k)</fullName>
            </value>
            <value>
                <fullName>Reserve(k)</fullName>
            </value>
            <value>
                <fullName>RK Only</fullName>
            </value>
            <value>
                <fullName>Mega Roth Single(k)</fullName>
            </value>
            <value>
                <fullName>Single(k)</fullName>
            </value>
            <value>
                <fullName>Fund Lineup Change</fullName>
            </value>
            <value>
                <fullName>Enhanced Payroll Service</fullName>
            </value>
            <value>
                <fullName>Direct Integration</fullName>
            </value>
            <value>
                <fullName>CensiblyYours - Prior 3(38)</fullName>
            </value>
            <value>
                <fullName>CensiblyYours - No Prior 3(38)</fullName>
            </value>
            <value>
                <fullName>Express(k)</fullName>
            </value>
            <value>
                <fullName>Single(k) Plus</fullName>
            </value>
            <value>
                <fullName>Simply Retirement Bundled</fullName>
            </value>
            <value>
                <fullName>Simply Retirement Unbundled</fullName>
            </value>
            <value>
                <fullName>Starter</fullName>
            </value>
            <value>
                <fullName>Builder</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Franchise</fullName>
            </value>
            <value>
                <fullName>Custom(k) MML</fullName>
            </value>
            <value>
                <fullName>Simply Retirement Single(k) Plus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>